--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -8,17 +8,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Movies DataBase</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="theme-color" content="#ffffff">
+    <title>PopCorn</title>
 </head>
 
-<body>
+<body class="ligth">
     <header class="header">
-        <h1 class="header__title"><i class="fas fa-film"></i> Movies DataBase</h1>
+        <h1 class="header__title"><img class="header__logo" src="./img/icons/movie.svg" alt="popcorn"> PopCorn<br>The Movies
+            Database</h1>
         <form id="search-form">
             <input type="text" class="header__search" id="search" placeholder="Поиск">
         </form>
+        <div>
+            <input type="checkbox" class="checkbox-toggle" id="theme-toggle">
+            <label for="theme-toggle" class="label-toggle">
+                <i class="fas fa-moon"></i>
+                <i class="fas fa-sun"></i>
+                <span class="ball"></span>
+            </label>
+        </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+        <h2 class="main__title">Популярное сейчас</h2>
+        <div class="main__container"></div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 
